pkg/lang/testdata/ub/config/invalid/encryption-call.ub
encryption: {
  @key-source: kms
  key-id:      @core.b64-decode('YWxpYXMvY2xvdWRib3Nz')
}
